--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="container">
         <h1>HTML Basic Questions</h1>
+        <h3>4 Marks for correct Question and 1 mark deduct when you mark wrong Ans</h3>
         <form id="form">
             <div id="questions">
                 <p>What does HTML stand for?</p>
