--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div id="container">
         <h1>HTML Basic Questions</h1>
-        <h3>4 Marks for correct Question and 1 mark deduct when you mark wrong Ans</h3>
+        <pre>4 Marks for correct Question
+               Negative Marking of 1</pre>
         <form id="form">
             <div id="questions">
                 <p>What does HTML stand for?</p>
