--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id="container">
         <h1>HTML Basic Questions</h1>
-        <pre>4 Marks for correct Question
-               Negative Marking of 1</pre>
+        <pre>4 Marks for correct Answer
+Negative Marking of 1 Mark</pre>
         <form id="form">
             <div id="questions">
                 <p>What does HTML stand for?</p>
